Trabalhos-Praticos/TP2/cparser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> global_declarations
Rule 2     global_declarations -> global_declarations global_declaration
Rule 3     global_declarations -> global_declaration
Rule 4     global_declaration -> function_declaration
Rule 5     global_declaration -> var_declaration
Rule 6     global_declaration -> short_var_declaration
Rule 7     function_declaration -> FUNC ID LPAREN parameters_opt RPAREN type block
Rule 8     parameters_opt -> parameters
Rule 9     parameters -> empty
Rule 10    parameters -> parameters COMMA parameter
Rule 11    parameters -> parameter
Rule 12    parameter -> ID type
Rule 13    block -> LBRACE block_contents RBRACE
Rule 14    block -> LBRACE RBRACE
Rule 15    block_contents -> statements
Rule 16    statements -> statements statement
Rule 17    statements -> statement
Rule 18    statement -> var_declaration
Rule 19    statement -> short_var_declaration
Rule 20    statement -> expression_statement
Rule 21    statement -> if_statement
Rule 22    statement -> for_statement
Rule 23    statement -> switch_statement
Rule 24    statement -> return_statement
Rule 25    statement -> assignment
Rule 26    statement -> CONTINUE SEMICOLON
Rule 27    statement -> BREAK SEMICOLON
Rule 28    expression_statement -> expression SEMICOLON
Rule 29    if_statement -> IF expression block else_clause
Rule 30    else_clause -> ELSE if_statement
Rule 31    else_clause -> ELSE block
Rule 32    else_clause -> empty
Rule 33    for_statement -> FOR for_init SEMICOLON expression SEMICOLON for_post block
Rule 34    for_statement -> FOR expression block
Rule 35    for_statement -> FOR block
Rule 36    for_init -> ID WALRUS expression
Rule 37    for_init -> VAR ID type EQUAL expression
Rule 38    for_post -> assignment
Rule 39    for_post -> expression
Rule 40    switch_statement -> SWITCH expression LBRACE switch_cases default_clause RBRACE
Rule 41    switch_cases -> switch_cases switch_case
Rule 42    switch_cases -> switch_case
Rule 43    switch_case -> CASE expression COLON statements
Rule 44    default_clause -> DEFAULT COLON statements
Rule 45    default_clause -> empty
Rule 46    return_statement -> RETURN expression_opt SEMICOLON
Rule 47    expression_opt -> expression
Rule 48    expression_opt -> empty
Rule 49    var_declaration -> VAR ID array_type EQUAL array_initializer SEMICOLON
Rule 50    var_declaration -> VAR ID array_type SEMICOLON
Rule 51    var_declaration -> ID WALRUS array_type array_initializer SEMICOLON
Rule 52    var_declaration -> VAR ID type EQUAL expression SEMICOLON
Rule 53    var_declaration -> VAR ID type SEMICOLON
Rule 54    short_var_declaration -> ID WALRUS expression SEMICOLON
Rule 55    array_type -> type LBRACKET NUMBER_LITERAL RBRACKET
Rule 56    array_type -> array_type LBRACKET NUMBER_LITERAL RBRACKET
Rule 57    array_type -> type LBRACKET RBRACKET
Rule 58    array_type -> array_type LBRACKET RBRACKET
Rule 59    array_initializer -> LBRACE RBRACE
Rule 60    array_initializer -> LBRACE expression_list RBRACE
Rule 61    array_initializer -> LBRACE nested_initializer_list RBRACE
Rule 62    nested_initializer_list -> array_initializer
Rule 63    nested_initializer_list -> nested_initializer_list COMMA array_initializer
Rule 64    array_access -> ID LBRACKET expression RBRACKET
Rule 65    array_access -> array_access LBRACKET expression RBRACKET
Rule 66    assignment -> ID EQUAL expression SEMICOLON
Rule 67    assignment -> array_access EQUAL expression SEMICOLON
Rule 68    assignment -> ID EQUAL array_initializer SEMICOLON
Rule 69    expression -> expression PLUS expression
Rule 70    expression -> expression MINUS expression
Rule 71    expression -> expression TIMES expression
Rule 72    expression -> expression DIVIDE expression
Rule 73    expression -> expression MODULO expression
Rule 74    expression -> expression EQUALITY expression
Rule 75    expression -> expression NOTEQUAL expression
Rule 76    expression -> expression GREATER expression
Rule 77    expression -> expression LESS expression
Rule 78    expression -> expression GREATEROREQUAL expression
Rule 79    expression -> expression LESSOREQUAL expression
Rule 80    expression -> expression CONDITIONALAND expression
Rule 81    expression -> expression CONDITIONALOR expression
Rule 82    expression -> NOT expression
Rule 83    expression -> MINUS expression
Rule 84    expression -> LPAREN expression RPAREN
Rule 85    expression -> literal
Rule 86    expression -> ID
Rule 87    expression -> array_access
Rule 88    expression -> ID INCREMENT
Rule 89    expression -> ID DECREMENT
Rule 90    expression -> function_call
Rule 91    function_call -> ID LPAREN arguments_opt RPAREN
Rule 92    arguments_opt -> arguments
Rule 93    arguments -> empty
Rule 94    arguments -> arguments COMMA expression
Rule 95    arguments -> expression
Rule 96    expression_list -> expression_list COMMA expression
Rule 97    expression_list -> expression
Rule 98    literal -> NUMBER_LITERAL
Rule 99    literal -> STRING_LITERAL
Rule 100   literal -> BOOLEAN_LITERAL
Rule 101   type -> INT
Rule 102   type -> FLOAT
Rule 103   type -> BOOL
Rule 104   type -> STRING
Rule 105   type -> VOID
Rule 106   empty -> <empty>

Terminals, with rules where they appear

BOOL                 : 103
BOOLEAN_LITERAL      : 100
BREAK                : 27
CASE                 : 43
COLON                : 43 44
COMMA                : 10 63 94 96
CONDITIONALAND       : 80
CONDITIONALOR        : 81
CONTINUE             : 26
DECREMENT            : 89
DEFAULT              : 44
DIVIDE               : 72
ELSE                 : 30 31
EQUAL                : 37 49 52 66 67 68
EQUALITY             : 74
FLOAT                : 102
FOR                  : 33 34 35
FUNC                 : 7
GREATER              : 76
GREATEROREQUAL       : 78
ID                   : 7 12 36 37 49 50 51 52 53 54 64 66 68 86 88 89 91
IF                   : 29
INCREMENT            : 88
INT                  : 101
LBRACE               : 13 14 40 59 60 61
LBRACKET             : 55 56 57 58 64 65
LESS                 : 77
LESSOREQUAL          : 79
LPAREN               : 7 84 91
MINUS                : 70 83
MODULO               : 73
NOT                  : 82
NOTEQUAL             : 75
NUMBER_LITERAL       : 55 56 98
PLUS                 : 69
RBRACE               : 13 14 40 59 60 61
RBRACKET             : 55 56 57 58 64 65
RETURN               : 46
RPAREN               : 7 84 91
SEMICOLON            : 26 27 28 33 33 46 49 50 51 52 53 54 66 67 68
STRING               : 104
STRING_LITERAL       : 99
SWITCH               : 40
TIMES                : 71
VAR                  : 37 49 50 52 53
VOID                 : 105
WALRUS               : 36 51 54
error                : 

Nonterminals, with rules where they appear

arguments            : 92 94
arguments_opt        : 91
array_access         : 65 67 87
array_initializer    : 49 51 62 63 68
array_type           : 49 50 51 56 58
assignment           : 25 38
block                : 7 29 31 33 34 35
block_contents       : 13
default_clause       : 40
else_clause          : 29
empty                : 9 32 45 48 93
expression           : 28 29 33 34 36 37 39 40 43 47 52 54 64 65 66 67 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 83 84 94 95 96 97
expression_list      : 60 96
expression_opt       : 46
expression_statement : 20
for_init             : 33
for_post             : 33
for_statement        : 22
function_call        : 90
function_declaration : 4
global_declaration   : 2 3
global_declarations  : 1 2
if_statement         : 21 30
literal              : 85
nested_initializer_list : 61 63
parameter            : 10 11
parameters           : 8 10
parameters_opt       : 7
program              : 0
return_statement     : 24
short_var_declaration : 6 19
statement            : 16 17
statements           : 15 16 43 44
switch_case          : 41 42
switch_cases         : 40 41
switch_statement     : 23
type                 : 7 12 37 52 53 55 57
var_declaration      : 5 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global_declarations
    (2) global_declarations -> . global_declarations global_declaration
    (3) global_declarations -> . global_declaration
    (4) global_declaration -> . function_declaration
    (5) global_declaration -> . var_declaration
    (6) global_declaration -> . short_var_declaration
    (7) function_declaration -> . FUNC ID LPAREN parameters_opt RPAREN type block
    (49) var_declaration -> . VAR ID array_type EQUAL array_initializer SEMICOLON
    (50) var_declaration -> . VAR ID array_type SEMICOLON
    (51) var_declaration -> . ID WALRUS array_type array_initializer SEMICOLON
    (52) var_declaration -> . VAR ID type EQUAL expression SEMICOLON
    (53) var_declaration -> . VAR ID type SEMICOLON
    (54) short_var_declaration -> . ID WALRUS expression SEMICOLON

    FUNC            shift and go to state 7
    VAR             shift and go to state 9
    ID              shift and go to state 8

    program                        shift and go to state 1
    global_declarations            shift and go to state 2
    global_declaration             shift and go to state 3
    function_declaration           shift and go to state 4
    var_declaration                shift and go to state 5
    short_var_declaration          shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> global_declarations .
    (2) global_declarations -> global_declarations . global_declaration
    (4) global_declaration -> . function_declaration
    (5) global_declaration -> . var_declaration
    (6) global_declaration -> . short_var_declaration
    (7) function_declaration -> . FUNC ID LPAREN parameters_opt RPAREN type block
    (49) var_declaration -> . VAR ID array_type EQUAL array_initializer SEMICOLON
    (50) var_declaration -> . VAR ID array_type SEMICOLON
    (51) var_declaration -> . ID WALRUS array_type array_initializer SEMICOLON
    (52) var_declaration -> . VAR ID type EQUAL expression SEMICOLON
    (53) var_declaration -> . VAR ID type SEMICOLON
    (54) short_var_declaration -> . ID WALRUS expression SEMICOLON

    $end            reduce using rule 1 (program -> global_declarations .)
    FUNC            shift and go to state 7
    VAR             shift and go to state 9
    ID              shift and go to state 8

    global_declaration             shift and go to state 10
    function_declaration           shift and go to state 4
    var_declaration                shift and go to state 5
    short_var_declaration          shift and go to state 6

state 3

    (3) global_declarations -> global_declaration .

    FUNC            reduce using rule 3 (global_declarations -> global_declaration .)
    VAR             reduce using rule 3 (global_declarations -> global_declaration .)
    ID              reduce using rule 3 (global_declarations -> global_declaration .)
    $end            reduce using rule 3 (global_declarations -> global_declaration .)


state 4

    (4) global_declaration -> function_declaration .

    FUNC            reduce using rule 4 (global_declaration -> function_declaration .)
    VAR             reduce using rule 4 (global_declaration -> function_declaration .)
    ID              reduce using rule 4 (global_declaration -> function_declaration .)
    $end            reduce using rule 4 (global_declaration -> function_declaration .)


state 5

    (5) global_declaration -> var_declaration .

    FUNC            reduce using rule 5 (global_declaration -> var_declaration .)
    VAR             reduce using rule 5 (global_declaration -> var_declaration .)
    ID              reduce using rule 5 (global_declaration -> var_declaration .)
    $end            reduce using rule 5 (global_declaration -> var_declaration .)


state 6

    (6) global_declaration -> short_var_declaration .

    FUNC            reduce using rule 6 (global_declaration -> short_var_declaration .)
    VAR             reduce using rule 6 (global_declaration -> short_var_declaration .)
    ID              reduce using rule 6 (global_declaration -> short_var_declaration .)
    $end            reduce using rule 6 (global_declaration -> short_var_declaration .)


state 7

    (7) function_declaration -> FUNC . ID LPAREN parameters_opt RPAREN type block

    ID              shift and go to state 11


state 8

    (51) var_declaration -> ID . WALRUS array_type array_initializer SEMICOLON
    (54) short_var_declaration -> ID . WALRUS expression SEMICOLON

    WALRUS          shift and go to state 12


state 9

    (49) var_declaration -> VAR . ID array_type EQUAL array_initializer SEMICOLON
    (50) var_declaration -> VAR . ID array_type SEMICOLON
    (52) var_declaration -> VAR . ID type EQUAL expression SEMICOLON
    (53) var_declaration -> VAR . ID type SEMICOLON

    ID              shift and go to state 13


state 10

    (2) global_declarations -> global_declarations global_declaration .

    FUNC            reduce using rule 2 (global_declarations -> global_declarations global_declaration .)
    VAR             reduce using rule 2 (global_declarations -> global_declarations global_declaration .)
    ID              reduce using rule 2 (global_declarations -> global_declarations global_declaration .)
    $end            reduce using rule 2 (global_declarations -> global_declarations global_declaration .)


state 11

    (7) function_declaration -> FUNC ID . LPAREN parameters_opt RPAREN type block

    LPAREN          shift and go to state 14


state 12

    (51) var_declaration -> ID WALRUS . array_type array_initializer SEMICOLON
    (54) short_var_declaration -> ID WALRUS . expression SEMICOLON
    (55) array_type -> . type LBRACKET NUMBER_LITERAL RBRACKET
    (56) array_type -> . array_type LBRACKET NUMBER_LITERAL RBRACKET
    (57) array_type -> . type LBRACKET RBRACKET
    (58) array_type -> . array_type LBRACKET RBRACKET
    (69) expression -> . expression PLUS expression
    (70) expression -> . expression MINUS expression
    (71) expression -> . expression TIMES expression
    (72) expression -> . expression DIVIDE expression
    (73) expression -> . expression MODULO expression
    (74) expression -> . expression EQUALITY expression
    (75) expression -> . expression NOTEQUAL expression
    (76) expression -> . expression GREATER expression
    (77) expression -> . expression LESS expression
    (78) expression -> . expression GREATEROREQUAL expression
    (79) expression -> . expression LESSOREQUAL expression
    (80) expression -> . expression CONDITIONALAND expression
    (81) expression -> . expression CONDITIONALOR expression
    (82) expression -> . NOT expression
    (83) expression -> . MINUS expression
    (84) expression -> . LPAREN expression RPAREN
    (85) expression -> . literal
    (86) expression -> . ID
    (87) expression -> . array_access
    (88) expression -> . ID INCREMENT
    (89) expression -> . ID DECREMENT
    (90) expression -> . function_call
    (101) type -> . INT
    (102) type -> . FLOAT
    (103) type -> . BOOL
    (104) type -> . STRING
    (105) type -> . VOID
    (98) literal -> . NUMBER_LITERAL
    (99) literal -> . STRING_LITERAL
    (100) literal -> . BOOLEAN_LITERAL
    (64) array_access -> . ID LBRACKET expression RBRACKET
    (65) array_access -> . array_access LBRACKET expression RBRACKET
    (91) function_call -> . ID LPAREN arguments_opt RPAREN

    NOT             shift and go to state 21
    MINUS           shift and go to state 20
    LPAREN          shift and go to state 22
    ID              shift and go to state 15
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    BOOL            shift and go to state 28
    STRING          shift and go to state 29
    VOID            shift and go to state 30
    NUMBER_LITERAL  shift and go to state 19
    STRING_LITERAL  shift and go to state 31
    BOOLEAN_LITERAL shift and go to state 32

    array_type                     shift and go to state 16
    expression                     shift and go to state 17
    type                           shift and go to state 18
    literal                        shift and go to state 23
    array_access                   shift and go to state 24
    function_call                  shift and go to state 25

state 13

    (49) var_declaration -> VAR ID . array_type EQUAL array_initializer SEMICOLON
    (50) var_declaration -> VAR ID . array_type SEMICOLON
    (52) var_declaration -> VAR ID . type EQUAL expression SEMICOLON
    (53) var_declaration -> VAR ID . type SEMICOLON
    (55) array_type -> . type LBRACKET NUMBER_LITERAL RBRACKET
    (56) array_type -> . array_type LBRACKET NUMBER_LITERAL RBRACKET
    (57) array_type -> . type LBRACKET RBRACKET
    (58) array_type -> . array_type LBRACKET RBRACKET
    (101) type -> . INT
    (102) type -> . FLOAT
    (103) type -> . BOOL
    (104) type -> . STRING
    (105) type -> . VOID

    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    BOOL            shift and go to state 28
    STRING          shift and go to state 29
    VOID            shift and go to state 30

    array_type                     shift and go to state 33
    type                           shift and go to state 34

state 14

    (7) function_declaration -> FUNC ID LPAREN . parameters_opt RPAREN type block
    (8) parameters_opt -> . parameters
    (9) parameters -> . empty
    (10) parameters -> . parameters COMMA parameter
    (11) parameters -> . parameter
    (106) empty -> .
    (12) parameter -> . ID type

    COMMA           reduce using rule 106 (empty -> .)
    RPAREN          reduce using rule 106 (empty -> .)
    ID              shift and go to state 35

    parameters_opt                 shift and go to state 36
    parameters                     shift and go to state 37
    empty                          shift and go to state 38
    parameter                      shift and go to state 39

state 15

    (86) expression -> ID .
    (88) expression -> ID . INCREMENT
    (89) expression -> ID . DECREMENT
    (64) array_access -> ID . LBRACKET expression RBRACKET
    (91) function_call -> ID . LPAREN arguments_opt RPAREN
